// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarContainer everything default: renders correctly 1`] = `
<div
  className="rdtDays"
>
  <table>
    <thead>
      <tr>
        <th
          className="rdtPrev"
        >
          <span>
            ‹
          </span>
        </th>
        <th
          className="rdtSwitch"
          colSpan={5}
        >
          September 2018
        </th>
        <th
          className="rdtNext"
        >
          <span>
            ›
          </span>
        </th>
      </tr>
      <tr>
        <th
          className="dow"
        >
          Su
        </th>
        <th
          className="dow"
        >
          Mo
        </th>
        <th
          className="dow"
        >
          Tu
        </th>
        <th
          className="dow"
        >
          We
        </th>
        <th
          className="dow"
        >
          Th
        </th>
        <th
          className="dow"
        >
          Fr
        </th>
        <th
          className="dow"
        >
          Sa
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="rdtDay rdtOld"
        >
          26
        </td>
        <td
          className="rdtDay rdtOld"
        >
          27
        </td>
        <td
          className="rdtDay rdtOld"
        >
          28
        </td>
        <td
          className="rdtDay rdtOld"
        >
          29
        </td>
        <td
          className="rdtDay rdtOld"
        >
          30
        </td>
        <td
          className="rdtDay rdtOld"
        >
          31
        </td>
        <td
          className="rdtDay"
        >
          1
        </td>
      </tr>
      <tr>
        <td
          className="rdtDay rdtToday"
        >
          2
        </td>
        <td
          className="rdtDay"
        >
          3
        </td>
        <td
          className="rdtDay"
        >
          4
        </td>
        <td
          className="rdtDay"
        >
          5
        </td>
        <td
          className="rdtDay"
        >
          6
        </td>
        <td
          className="rdtDay"
        >
          7
        </td>
        <td
          className="rdtDay"
        >
          8
        </td>
      </tr>
      <tr>
        <td
          className="rdtDay"
        >
          9
        </td>
        <td
          className="rdtDay"
        >
          10
        </td>
        <td
          className="rdtDay"
        >
          11
        </td>
        <td
          className="rdtDay"
        >
          12
        </td>
        <td
          className="rdtDay"
        >
          13
        </td>
        <td
          className="rdtDay"
        >
          14
        </td>
        <td
          className="rdtDay"
        >
          15
        </td>
      </tr>
      <tr>
        <td
          className="rdtDay"
        >
          16
        </td>
        <td
          className="rdtDay"
        >
          17
        </td>
        <td
          className="rdtDay"
        >
          18
        </td>
        <td
          className="rdtDay"
        >
          19
        </td>
        <td
          className="rdtDay"
        >
          20
        </td>
        <td
          className="rdtDay"
        >
          21
        </td>
        <td
          className="rdtDay"
        >
          22
        </td>
      </tr>
      <tr>
        <td
          className="rdtDay"
        >
          23
        </td>
        <td
          className="rdtDay"
        >
          24
        </td>
        <td
          className="rdtDay"
        >
          25
        </td>
        <td
          className="rdtDay"
        >
          26
        </td>
        <td
          className="rdtDay"
        >
          27
        </td>
        <td
          className="rdtDay"
        >
          28
        </td>
        <td
          className="rdtDay"
        >
          29
        </td>
      </tr>
      <tr>
        <td
          className="rdtDay"
        >
          30
        </td>
        <td
          className="rdtDay rdtNew"
        >
          1
        </td>
        <td
          className="rdtDay rdtNew"
        >
          2
        </td>
        <td
          className="rdtDay rdtNew"
        >
          3
        </td>
        <td
          className="rdtDay rdtNew"
        >
          4
        </td>
        <td
          className="rdtDay rdtNew"
        >
          5
        </td>
        <td
          className="rdtDay rdtNew"
        >
          6
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DateTime component className: set to arbitrary value 1`] = `
<div
  className="rdt"
>
  <input
    className="arbitrary-value"
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component dateFormat set to false 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component dateFormat set to true 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component defaultValue: set to arbitrary value 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value="12/21/2016 5:36 PM"
  />
</div>
`;

exports[`DateTime component everything default: renders correctly 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component input input: set to false 1`] = `
<div
  className="rdt rdtStatic rdtOpen"
>
  <div
    className="rdtPicker"
  >
    <div
      className="rdtDays"
    >
      <table>
        <thead>
          <tr>
            <th
              className="rdtPrev"
              onClick={[Function]}
            >
              <span>
                ‹
              </span>
            </th>
            <th
              className="rdtSwitch"
              colSpan={5}
              onClick={[Function]}
            >
              September 2018
            </th>
            <th
              className="rdtNext"
              onClick={[Function]}
            >
              <span>
                ›
              </span>
            </th>
          </tr>
          <tr>
            <th
              className="dow"
            >
              Su
            </th>
            <th
              className="dow"
            >
              Mo
            </th>
            <th
              className="dow"
            >
              Tu
            </th>
            <th
              className="dow"
            >
              We
            </th>
            <th
              className="dow"
            >
              Th
            </th>
            <th
              className="dow"
            >
              Fr
            </th>
            <th
              className="dow"
            >
              Sa
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              26
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              27
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              28
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              29
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              30
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              31
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              1
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay rdtToday"
              onClick={[Function]}
            >
              2
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              3
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              4
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              5
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              6
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              7
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              8
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              9
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              10
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              11
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              12
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              13
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              14
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              15
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              16
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              17
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              18
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              19
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              20
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              21
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              22
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              23
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              24
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              25
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              26
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              27
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              28
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              29
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              30
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              1
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              2
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              3
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              4
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              5
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              6
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr>
            <td
              className="rdtTimeToggle"
              colSpan={7}
              onClick={[Function]}
            >
              12:00 AM
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`DateTime component input input: set to true 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component input props with className specified 1`] = `
<div
  className="rdt"
>
  <input
    className="arbitrary-className"
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component input props with disabled specified 1`] = `
<div
  className="rdt"
>
  <input
    disabled={true}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component input props with name specified 1`] = `
<div
  className="rdt"
>
  <input
    name="arbitrary-name"
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component input props with placeholder specified 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="arbitrary-placeholder"
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component input props with required specified 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    required={true}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component isValidDate: only valid if after yesterday 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component open set to false 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component open set to true 1`] = `
<div
  className="rdt rdtOpen"
>
  <input
    className="form-control"
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
  <div
    className="rdtPicker"
    style={
      Object {
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "top": 0,
      }
    }
  >
    <div
      className="rdtDays"
    >
      <table>
        <thead>
          <tr>
            <th
              className="rdtPrev"
              onClick={[Function]}
            >
              <span>
                ‹
              </span>
            </th>
            <th
              className="rdtSwitch"
              colSpan={5}
              onClick={[Function]}
            >
              September 2018
            </th>
            <th
              className="rdtNext"
              onClick={[Function]}
            >
              <span>
                ›
              </span>
            </th>
          </tr>
          <tr>
            <th
              className="dow"
            >
              Su
            </th>
            <th
              className="dow"
            >
              Mo
            </th>
            <th
              className="dow"
            >
              Tu
            </th>
            <th
              className="dow"
            >
              We
            </th>
            <th
              className="dow"
            >
              Th
            </th>
            <th
              className="dow"
            >
              Fr
            </th>
            <th
              className="dow"
            >
              Sa
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              26
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              27
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              28
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              29
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              30
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              31
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              1
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay rdtToday"
              onClick={[Function]}
            >
              2
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              3
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              4
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              5
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              6
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              7
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              8
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              9
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              10
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              11
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              12
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              13
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              14
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              15
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              16
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              17
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              18
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              19
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              20
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              21
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              22
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              23
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              24
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              25
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              26
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              27
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              28
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              29
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              30
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              1
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              2
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              3
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              4
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              5
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              6
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr>
            <td
              className="rdtTimeToggle"
              colSpan={7}
              onClick={[Function]}
            >
              12:00 AM
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`DateTime component open should support change false -> true 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component open should support change false -> true 2`] = `
<div
  className="rdt rdtOpen"
>
  <input
    className="form-control"
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
  <div
    className="rdtPicker"
    style={
      Object {
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "top": 0,
      }
    }
  >
    <div
      className="rdtDays"
    >
      <table>
        <thead>
          <tr>
            <th
              className="rdtPrev"
              onClick={[Function]}
            >
              <span>
                ‹
              </span>
            </th>
            <th
              className="rdtSwitch"
              colSpan={5}
              onClick={[Function]}
            >
              September 2018
            </th>
            <th
              className="rdtNext"
              onClick={[Function]}
            >
              <span>
                ›
              </span>
            </th>
          </tr>
          <tr>
            <th
              className="dow"
            >
              Su
            </th>
            <th
              className="dow"
            >
              Mo
            </th>
            <th
              className="dow"
            >
              Tu
            </th>
            <th
              className="dow"
            >
              We
            </th>
            <th
              className="dow"
            >
              Th
            </th>
            <th
              className="dow"
            >
              Fr
            </th>
            <th
              className="dow"
            >
              Sa
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              26
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              27
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              28
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              29
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              30
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              31
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              1
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay rdtToday"
              onClick={[Function]}
            >
              2
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              3
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              4
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              5
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              6
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              7
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              8
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              9
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              10
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              11
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              12
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              13
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              14
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              15
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              16
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              17
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              18
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              19
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              20
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              21
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              22
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              23
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              24
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              25
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              26
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              27
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              28
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              29
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              30
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              1
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              2
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              3
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              4
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              5
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              6
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr>
            <td
              className="rdtTimeToggle"
              colSpan={7}
              onClick={[Function]}
            >
              12:00 AM
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`DateTime component open should support change true -> false 1`] = `
<div
  className="rdt rdtOpen"
>
  <input
    className="form-control"
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
  <div
    className="rdtPicker"
    style={
      Object {
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "top": 0,
      }
    }
  >
    <div
      className="rdtDays"
    >
      <table>
        <thead>
          <tr>
            <th
              className="rdtPrev"
              onClick={[Function]}
            >
              <span>
                ‹
              </span>
            </th>
            <th
              className="rdtSwitch"
              colSpan={5}
              onClick={[Function]}
            >
              September 2018
            </th>
            <th
              className="rdtNext"
              onClick={[Function]}
            >
              <span>
                ›
              </span>
            </th>
          </tr>
          <tr>
            <th
              className="dow"
            >
              Su
            </th>
            <th
              className="dow"
            >
              Mo
            </th>
            <th
              className="dow"
            >
              Tu
            </th>
            <th
              className="dow"
            >
              We
            </th>
            <th
              className="dow"
            >
              Th
            </th>
            <th
              className="dow"
            >
              Fr
            </th>
            <th
              className="dow"
            >
              Sa
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              26
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              27
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              28
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              29
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              30
            </td>
            <td
              className="rdtDay rdtOld"
              onClick={[Function]}
            >
              31
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              1
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay rdtToday"
              onClick={[Function]}
            >
              2
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              3
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              4
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              5
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              6
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              7
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              8
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              9
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              10
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              11
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              12
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              13
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              14
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              15
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              16
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              17
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              18
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              19
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              20
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              21
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              22
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              23
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              24
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              25
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              26
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              27
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              28
            </td>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              29
            </td>
          </tr>
          <tr>
            <td
              className="rdtDay"
              onClick={[Function]}
            >
              30
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              1
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              2
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              3
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              4
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              5
            </td>
            <td
              className="rdtDay rdtNew"
              onClick={[Function]}
            >
              6
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr>
            <td
              className="rdtTimeToggle"
              colSpan={7}
              onClick={[Function]}
            >
              12:00 AM
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`DateTime component open should support change true -> false 2`] = `
<div
  className="rdt"
>
  <input
    className="form-control"
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component renderDay: specified 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    renderDay={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component renderMonth: specified 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    renderMonth={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component renderYear: specified 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    renderYear={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component timeFormat set to false 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component timeFormat set to true 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component value: set to arbitrary value 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value="12/21/2016 5:36 PM"
  />
</div>
`;

exports[`DateTime component viewMode set to days 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component viewMode set to months 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component viewMode set to time 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component viewMode set to years 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component viewMode should support changing dynamically 1`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DateTime component viewMode should support changing dynamically 2`] = `
<div
  className="rdt"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`DaysView everything default: renders correctly 1`] = `
<div
  className="rdtDays"
>
  <table>
    <thead>
      <tr>
        <th
          className="rdtPrev"
          onClick={[Function]}
        >
          <span>
            ‹
          </span>
        </th>
        <th
          className="rdtSwitch"
          colSpan={5}
          onClick={[Function]}
        >
          Invalid Date
        </th>
        <th
          className="rdtNext"
          onClick={[Function]}
        >
          <span>
            ›
          </span>
        </th>
      </tr>
      <tr>
        <th
          className="dow"
        >
          Invalid Date
        </th>
        <th
          className="dow"
        >
          Invalid Date
        </th>
        <th
          className="dow"
        >
          Invalid Date
        </th>
        <th
          className="dow"
        >
          Invalid Date
        </th>
        <th
          className="dow"
        >
          Invalid Date
        </th>
        <th
          className="dow"
        >
          Invalid Date
        </th>
        <th
          className="dow"
        >
          Invalid Date
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
      </tr>
      <tr>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
      </tr>
      <tr>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
      </tr>
      <tr>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
      </tr>
      <tr>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
      </tr>
      <tr>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtDay"
          onClick={[Function]}
        >
          Invalid Date
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`MonthsView everything default: renders correctly 1`] = `
<div
  className="rdtMonths"
>
  <table>
    <thead>
      <tr>
        <th
          className="rdtPrev"
          onClick={[Function]}
        >
          <span>
            ‹
          </span>
        </th>
        <th
          className="rdtSwitch"
          colSpan={2}
          onClick={[Function]}
        >
          Invalid Date
        </th>
        <th
          className="rdtNext"
          onClick={[Function]}
        >
          <span>
            ›
          </span>
        </th>
      </tr>
    </thead>
  </table>
  <table>
    <tbody>
      <tr>
        <td
          className="rdtMonth rdtDisabled"
          onClick={[Function]}
        >
          Jan
        </td>
        <td
          className="rdtMonth rdtDisabled"
          onClick={[Function]}
        >
          Feb
        </td>
        <td
          className="rdtMonth rdtDisabled"
          onClick={[Function]}
        >
          Mar
        </td>
        <td
          className="rdtMonth rdtDisabled"
          onClick={[Function]}
        >
          Apr
        </td>
      </tr>
      <tr>
        <td
          className="rdtMonth rdtDisabled"
          onClick={[Function]}
        >
          May
        </td>
        <td
          className="rdtMonth rdtDisabled"
          onClick={[Function]}
        >
          Jun
        </td>
        <td
          className="rdtMonth rdtDisabled"
          onClick={[Function]}
        >
          Jul
        </td>
        <td
          className="rdtMonth rdtDisabled"
          onClick={[Function]}
        >
          Aug
        </td>
      </tr>
      <tr>
        <td
          className="rdtMonth rdtDisabled"
          onClick={[Function]}
        >
          Sep
        </td>
        <td
          className="rdtMonth rdtDisabled"
          onClick={[Function]}
        >
          Oct
        </td>
        <td
          className="rdtMonth rdtDisabled"
          onClick={[Function]}
        >
          Nov
        </td>
        <td
          className="rdtMonth rdtDisabled"
          onClick={[Function]}
        >
          Dec
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TimeView everything default: renders correctly 1`] = `
<div
  className="rdtTime"
>
  <table>
    <tbody>
      <tr>
        <td>
          <div
            className="rdtCounters"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TimeView should render with full time with UPPERCASE daypart 1`] = `
<div
  className="rdtTime"
>
  <table>
    <tbody>
      <tr>
        <td>
          <div
            className="rdtCounters"
          >
            <div
              className="rdtCounter"
            >
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▲
              </span>
              <div
                className="rdtCount"
              >
                Invalid Date
              </div>
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▼
              </span>
            </div>
            <div
              className="rdtCounterSeparator"
            >
              :
            </div>
            <div
              className="rdtCounter"
            >
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▲
              </span>
              <div
                className="rdtCount"
              >
                Invalid Date
              </div>
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▼
              </span>
            </div>
            <div
              className="rdtCounterSeparator"
            >
              :
            </div>
            <div
              className="rdtCounter"
            >
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▲
              </span>
              <div
                className="rdtCount"
              >
                Invalid Date
              </div>
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▼
              </span>
            </div>
            <div
              className="rdtCounterSeparator"
            >
              :
            </div>
            <div
              className="rdtCounter"
            >
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▲
              </span>
              <div
                className="rdtCount"
              >
                Invalid Date
              </div>
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▼
              </span>
            </div>
            <div
              className="rdtCounter"
            >
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▲
              </span>
              <div
                className="rdtCount"
              >
                Invalid Date
              </div>
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▼
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TimeView should render with full time with lowercase daypart 1`] = `
<div
  className="rdtTime"
>
  <table>
    <tbody>
      <tr>
        <td>
          <div
            className="rdtCounters"
          >
            <div
              className="rdtCounter"
            >
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▲
              </span>
              <div
                className="rdtCount"
              >
                Invalid Date
              </div>
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▼
              </span>
            </div>
            <div
              className="rdtCounterSeparator"
            >
              :
            </div>
            <div
              className="rdtCounter"
            >
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▲
              </span>
              <div
                className="rdtCount"
              >
                Invalid Date
              </div>
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▼
              </span>
            </div>
            <div
              className="rdtCounterSeparator"
            >
              :
            </div>
            <div
              className="rdtCounter"
            >
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▲
              </span>
              <div
                className="rdtCount"
              >
                Invalid Date
              </div>
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▼
              </span>
            </div>
            <div
              className="rdtCounterSeparator"
            >
              :
            </div>
            <div
              className="rdtCounter"
            >
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▲
              </span>
              <div
                className="rdtCount"
              >
                Invalid Date
              </div>
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▼
              </span>
            </div>
            <div
              className="rdtCounter"
            >
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▲
              </span>
              <div
                className="rdtCount"
              >
                Invalid Date
              </div>
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▼
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TimeView should render with military time 1`] = `
<div
  className="rdtTime"
>
  <table>
    <tbody>
      <tr>
        <td>
          <div
            className="rdtCounters"
          >
            <div
              className="rdtCounter"
            >
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▲
              </span>
              <div
                className="rdtCount"
              >
                Invalid Date
              </div>
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▼
              </span>
            </div>
            <div
              className="rdtCounterSeparator"
            >
              :
            </div>
            <div
              className="rdtCounter"
            >
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▲
              </span>
              <div
                className="rdtCount"
              >
                Invalid Date
              </div>
              <span
                className="rdtBtn"
                onMouseDown={[Function]}
              >
                ▼
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`YearsView everything default: renders correctly 1`] = `
<div
  className="rdtYears"
>
  <table>
    <thead>
      <tr>
        <th
          className="rdtPrev"
          onClick={[Function]}
        >
          <span>
            ‹
          </span>
        </th>
        <th
          className="rdtSwitch"
          colSpan={2}
          onClick={[Function]}
        >
          NaN
          -
          NaN
        </th>
        <th
          className="rdtNext"
          onClick={[Function]}
        >
          <span>
            ›
          </span>
        </th>
      </tr>
    </thead>
  </table>
  <table>
    <tbody>
      <tr>
        <td
          className="rdtYear"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtYear"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtYear"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtYear"
          onClick={[Function]}
        >
          Invalid Date
        </td>
      </tr>
      <tr>
        <td
          className="rdtYear"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtYear"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtYear"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtYear"
          onClick={[Function]}
        >
          Invalid Date
        </td>
      </tr>
      <tr>
        <td
          className="rdtYear"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtYear"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtYear"
          onClick={[Function]}
        >
          Invalid Date
        </td>
        <td
          className="rdtYear"
          onClick={[Function]}
        >
          Invalid Date
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
